@@ -167,6 +167,8 @@ multi-signature generation
 95. svctool: --mrtg command - added favicon.png to mailmrtg/index.html
 - 08/04/2023
 96. svctool: added mrtg graphs for inlookup queries
+- 09/04/2023
+97. svctool: added mrtg graphs for inlookup cache hits and dnscache
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
 Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
